Text overflow fix

--- a/src/client/components/Story/Story.less
+++ b/src/client/components/Story/Story.less
@@ -64,7 +64,7 @@
   &__header {
     padding: 16px;
     display: flex;
-    max-width: 90%;
+    max-width: 100%;
 
     &__flex {
       display: flex;
@@ -92,6 +92,7 @@
     &__text {
       margin-left: 6px;
       width: 100%;
+      overflow: auto;
 
       @media @small {
         margin-left: 0 12px;
