--- a/src/client/user/UserHeader/UserHeader.less
+++ b/src/client/user/UserHeader/UserHeader.less
@@ -185,7 +185,7 @@
 
     .UserHeader__flexWrap {
       margin: 0 0 5px;
-      max-width: 90%;
+      max-width: 100%;
     }
 
     @media @small {
